--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/家谱网.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/家谱网.html
@@ -9,7 +9,7 @@
 		#all{
 			margin: 0px auto;
 			width: 1540px;
-			height:2100px;
+			height:1900px;
 			
 		}
 			#alld{
@@ -26,7 +26,7 @@
 			background-size: 100% 100%;
 		}
 		#auto{width:1300px;
-		height:1200px; 
+		height:1100px; 
 		margin: 50px auto;
 		border:1px solid #0B3095;}
 		#gonggao{
@@ -115,17 +115,25 @@
 		.weixin{
 			float: right;
 		}*/
+		#foot{
+			width:1540px;
+			height: 50px;
+			background-color:#262626;
+			color: white;
+			text-align: center;
+			line-height: 50px;
+		}
 	</style>
 	
 </head>
 
 <body>
-	<div id="top"></div><!--顶部结束-->
+	<div id="top">天高地迥，觉宇宙之无穷；兴尽悲来，识盈虚之有数。</div><!--顶部结束-->
 	<div id="all"><!--总开始-->
 		<div id="alld"><!--左右留间距-->
 			<div class="hlogo"><!--logo一行-->
 	<img src="img/陈logo4.jpg" width="240px">
-				<ul>
+				<ul id="ul">
 				<li><a href="家谱网.html" >首页</a></li>
 				<li><a href="陈氏名人.html">陈氏名人</a></li>
 				<li><a href="陈氏源流.html">陈氏源流</a></li>
@@ -169,5 +177,9 @@
 			
 		</div>-->
 	</div><!--总结束-->
+		<!--foot-->
+			<div id="foot">友情链接：广告位</div>
+	</div>
+
 </body>
 </html>
