--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/陈氏名人.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/陈氏名人.html
@@ -71,7 +71,7 @@
 </head>
 
 <body>
-	<div id="top"></div><!--顶部结束-->
+	<div id="top">天高地迥，觉宇宙之无穷；兴尽悲来，识盈虚之有数。</div><!--顶部结束-->
 	<div id="all"><!--总开始-->
 
 
