--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/陈氏源流.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/陈氏源流.html
@@ -82,7 +82,7 @@ box-shadow:0px 5px 6px black;
 </head>
 
 <body>
-	<div id="top"></div><!--顶部结束-->
+	<div id="top">天高地迥，觉宇宙之无穷；兴尽悲来，识盈虚之有数。</div><!--顶部结束-->
 	<div id="all"><!--总开始-->
 		<div id="alld"><!--左右留间距-->
 			<div class="hlogo"><!--logo一行-->
@@ -90,9 +90,9 @@ box-shadow:0px 5px 6px black;
 				<ul>
 				<li><a href="家谱网.html" >首页</a></li>
 				<li><a href="陈氏名人.html">陈氏名人</a></li>
-				<li><a href="#">陈氏源流</a></li>
-				<li><a href="#">陈氏文化</a></li>
-				<li><a href="#">联系我们</a></li>
+				<li><a href="陈氏源流.html">陈氏源流</a></li>
+				<li><a href="陈氏文化.html">陈氏文化</a></li>
+				<li><a href="联系我们.html">联系我们</a></li>
 				</ul>
 				</div><!--logo一行-->
 			<!----->
