--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/联系我们.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/联系我们.html
@@ -45,21 +45,54 @@
 		.text-onclick{
 			width:300px;
 			height: 300px;
-			border: 1px solid red;
+			
 			text-align: center;
 			color: white;
 			margin: 0px auto;
 		}
-		#we{display: none;}
+
+		.a1{
+			width: 118px;
+			height: 40px;
+			border: 1px solid #FFE1E2;
+			line-height: 40px;
+			float: left;
+		}
+		#we{
+			width:110px;
+			height: 110px;
+		
+			float: left;
+			position: relative;
+			left: 40px;
+				
+		}
+		.text-onclick a{
+			color: white;
+			text-decoration: none;
+		}
+		#QQ{
+			float: left;
+			position: relative;
+			left: 150px;
+		}
 	</style>
 	
 	<script>
 		function ooo(){
 			window.location.href="家谱网.html";
 		}
-	    function appear(){
-			var owechat=document.getElementsById('we');
-			owechat.style.display="block";
+		function showImg(){ 
+document.getElementById("we").style.display='block'; 
+} 
+function hideImg(){ 
+document.getElementById("we").style.display='none'; 
+} 
+		function QQout(){
+			document.getElementById('QQ').style.display='none';
+		}
+		function QQsover(){
+			document.getElementById('QQ').style.display='block';
 		}
 	</script>
 	
@@ -67,11 +100,13 @@
 
 <body>
 	<div id="mediate">
-		<div id="head-portrait"  ondblClick="alert('双击了')"  title="回到首页。"></div>
+		<div id="head-portrait"  ondblClick="ooo()"  title="双击回到首页。"></div>
 		<hr>
-		<div class="text-onclick"><a onmouseover="appear()">微信</a><span>&nbsp;|&nbsp;</span><a id="a2">QQ</a>
+		<div class="text-onclick"><a href="javascrp:void(0)" onMouseOut="hideImg()" onmouseover="showImg()">微信</a><span>&nbsp;|&nbsp;</span>
+			<a href="javascrp:void(0)" onMouseOut="QQout()" onMouseOver="QQsover()">QQ</a>
 			<p></p>
-			<img id="we" src="weixin.png" width="100px"/>
+			<div  id="we"  style="display: none;"><img src="weixin.png" width="100px" ></div>
+			<div id="QQ" style="display:none; "><img src="img/QQ.jpg" width="100px"/></div>
 		</div>
 	</div>
 </body>
