--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/家谱网.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/家谱网.html
@@ -5,22 +5,21 @@
 <title>首页</title>
 	<link rel="stylesheet" type="text/css" href="top.css"/>
 	<style type="text/css">
+
+
 				/*all居中*/
 		#all{
 			margin: 0px auto;
-			width: 1540px;
-			height:1900px;
+			width:100%;
+			height:1950px;
 			
 		}
-			#alld{
-			margin: 0px auto;
-			width:1300px;
-			height: 169px;
-
-		}
+	
 		/*大图片*/
 		#bgimg{
-			width:1540px;
+			margin: 0px auto;
+			max-width: 1540px;
+			
 			height: 504px;
 			background:url("img/风景.jpg") no-repeat;
 			background-size: 100% 100%;
@@ -41,7 +40,7 @@
 			width:900px;
 			height: 140px;
 			color: #7B7B7B;
-			font-size: 50px;
+			font-size: 40px;
 			line-height: 146px;
 			text-align: center;
 			float:right;
@@ -82,11 +81,11 @@
 		}
 		/*家族动态*/
 		.main-foot{
-			width:1300px;
+			width:100%;
 			height: 500px;
 		}
 		.main-foot-top{
-			width:1300px;
+			width:100%;
 			height: 140px;
 		}
 		.main-foot-top span{
@@ -97,7 +96,7 @@
 		}
 		/*家族动态的图片部分*/
 		.main-foot-foot{
-			width:1300px;
+			width:100%;
 			height: 400px;
 			background-color: antiquewhite;
 			
@@ -116,7 +115,7 @@
 			float: right;
 		}*/
 		#foot{
-			width:1540px;
+			width:100%;
 			height: 50px;
 			background-color:#262626;
 			color: white;
@@ -156,7 +155,7 @@
 		<div class="main-right">
 			<div class="rigth-top"><img src="img/知.png" align="middle"><span ><a href="陈氏源流.html#family" style="text-decoration: none;color:#666666;"> · 我的家族</a></span></div>	
 			<div class="rigth-foot">
-			  <p> 因为姓陈，因为同根同祖，因为我们流着相同的血液，我们相聚在一起，同喜共乐，沟通交流，增进亲情，共谋发展，成就陈氏大业，增大陈氏家族！</p><P>天下陈，是同根，传播陈氏文化，弘扬陈氏精神，我们是同祖同根同源的一家人。数千年来，勤劳、善良、勇敢的陈氏先人创造了灿烂的陈氏文化，丰富了中华历史的厚度和中华文明的内涵；数千年来，陈氏族人以陈氏独有的顽强和果敢，在中华大地上生息繁衍，开枝散叶，最终发展成为中华泱泱大族，名望世家。</P></div>	
+			  <p> 因为姓陈，因为同根同祖，因为我们流着相同的血液，我们相聚在一起，同喜共乐，沟通交流，增进亲情，共谋发展，成就陈氏大业，增大陈氏家族！</p><p>天下陈，是同根，传播陈氏文化，弘扬陈氏精神，我们是同祖同根同源的一家人。数千年来，勤劳、善良、勇敢的陈氏先人创造了灿烂的陈氏文化，丰富了中华历史的厚度和中华文明的内涵；数千年来，陈氏族人以陈氏独有的顽强和果敢，在中华大地上生息繁衍，开枝散叶，最终发展成为中华泱泱大族，名望世家。</p></div>	
 		</div>
 			
 			
@@ -167,8 +166,14 @@
 				<img src="img/报.png" align="middle"><span> · 家族动态</span>
 				</div>
 				<div class="main-foot-foot">
-				<p style="padding:10px; font-size: 25px;">·    陈氏宗亲联谊会在甫薇山庄隆重召开</p>
-				<img src="img/lianyi.png" width="500px" style="margin-left: 20px;"/>
+					<div class="foot-left" style="width:600px; height: 400px; float: left;">
+				<p style="padding:10px; font-size: 25px;">·    陈氏宗亲联谊会在罗田甫薇山庄隆重召开</p>
+				<img src="img/lianyi.png" width="500px" style="margin-left: 20px;" alt="抱歉，图片显示失败！"/>
+						</div>
+					<div >
+					<p style="padding:10px; font-size: 25px;">·    长乐宗亲来淮拜祖</p>
+						<img src="img/640.jpg" width="400px" style="margin-left: 20px;" alt="抱歉，图片显示失败！"/>
+					</div>
 				</div>
 			</div>
 		<!--</div>
@@ -177,9 +182,10 @@
 			
 		</div>-->
 	</div><!--总结束-->
-		<!--foot-->
-			<div id="foot">友情链接：广告位</div>
+		
 	</div>
+	<!--foot-->
+			<div id="foot">友情链接：广告位</div>
 
 </body>
 </html>
