--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/联系我们.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/联系我们.html
@@ -30,9 +30,9 @@
 			
 		}
 		#head-portrait:hover{
-			transform: rotate(360deg);
+			transform: rotate(720deg);
 			-moz-transform:rotate(720deg);
-			-mo-transform:rotate(360deg);
+			-mo-transform:rotate(7200deg);
 		}
 		hr{
 			max-width: 300px;
@@ -105,7 +105,7 @@ document.getElementById("we").style.display='none';
 		<div class="text-onclick"><a href="javascrp:void(0)" onMouseOut="hideImg()" onmouseover="showImg()">微信</a><span>&nbsp;|&nbsp;</span>
 			<a href="javascrp:void(0)" onMouseOut="QQout()" onMouseOver="QQsover()">QQ</a>
 			<p></p>
-			<div  id="we"  style="display: none;"><img src="weixin.png" width="100px" ></div>
+			<div  id="we"  style="display:none;"><img src="img/weixin.jpg" width="100px" ></div>
 			<div id="QQ" style="display:none; "><img src="img/QQ.jpg" width="100px"/></div>
 		</div>
 	</div>
