--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/陈氏名人.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/陈氏名人.html
@@ -8,11 +8,11 @@
 			/*all居中*/
 		#all{
 			margin: 0px auto;
-			width: 1540px;
+			width: 100%;
 			height: 2000px;
 			
 		}
-		
+	
 		/**主体部分----------------------------------*/
 		#main-nav{
 			width:240px;
@@ -27,10 +27,10 @@
 		}
 		/*主主体部分背景颜色*/
 		#bgcolor{
-			width:1540px;
+			width:100%;
 			height: 2000px;
 			background-color: #eeeeee;
-			border: 1px solid #940BCF;
+			/*border: 1px solid #940BCF;*/
 			margin-left: 0px;
 		}
 		/*用来居中*/
@@ -86,6 +86,7 @@
 				<li><a href="联系我们.html">联系我们</a></li>
 				</ul>
 				</div><!--logo一行-->
+			</div><!--居中的内容在这里，左右留间距-->
 					<div id="bgcolor">
 						<div id="center"><!--用来居中-->
 							<div id="main-nav">
@@ -108,14 +109,14 @@
 									<li><a href="陈氏名人/陈云.html" target="main">陈云</a></li>
 									<li><a href="陈氏名人/陈赓.html" target="main">陈赓</a></li>
 								</ul>
-								<img src="陈氏名人/img/xm.png" width=300px/>
+								<img src="陈氏名人/img/xm.png" width="300px" alt="图显示失败！"/>
 							</div>
 							<div id="main-content">
 								<iframe src="陈氏名人/陈寿.html"  name="main" width="1000px" height="2000px" scrolling="scrolling" ></iframe>
 							</div>
 						</div><!--用来居中-->
 				</div>
-			</div><!--居中的内容在这里，左右留间距-->
+			
 		</div>
 </body>
 </html>
