--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/陈氏源流.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/陈氏源流.html
@@ -70,7 +70,7 @@ box-shadow:0px 5px 6px black;
 }
 		/*foot*/
 		#foot{
-			width:1540px;
+			width:100%;
 			height: 50px;
 			background-color: black;
 			color: white;
@@ -139,8 +139,10 @@ box-shadow:0px 5px 6px black;
 			</div>
 			
 			</div>
-		<!--foot-->
-			<div id="foot">友情链接：广告位</div>
+		
 	</div>
+	
+	<!--foot-->
+			<div id="foot">友情链接：广告位</div>
 </body>
 </html>
