--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/家谱网.html
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/家谱网.html
@@ -18,7 +18,7 @@
 		/*大图片*/
 		#bgimg{
 			margin: 0px auto;
-			max-width: 1540px;
+			max-width: 100%;
 			
 			height: 504px;
 			background:url("img/风景.jpg") no-repeat;
